# emergence

./: .gitignore  Cargo.toml  DEBUGGER_STATUS.md  EMERGENCE_CODEBASE_ANALYSIS.md  EMERGENCE_CODEBASE_RESEARCH.md  EMERGENCE_INTERPRETER_DESIGN.md  EMERGENCE_ROADMAP.md  LICENSE  PERFORMANCE_SUMMARY.md  README.md  RESEARCHER_FINDINGS.md  debugger_interaction.txt  demonstrate_autonomous_debugging.md  test_autonomous_debugging.rs  test_commit.md  what_emerges_next.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.emergence/: README-testing-system.md  comprehensive_test_report.json  performance_report.md
.emergence/events/: domain_analysis.jsonl  enhanced_system_events.jsonl  event_bus.jsonl  performance_tests.jsonl  researcher_analysis.jsonl  system_events.jsonl
.emergence/rules/: commit-frequency.yaml
.emergence/schemas/behaviors/: autonomous-testing.yaml
.emergence/schemas/capabilities/: test-generation.yaml  test-optimization.yaml
.emergence/schemas/essences/: architect-essence.yaml  coordinator-essence.yaml  debugger-essence.yaml  researcher-essence.yaml  synthesizer-essence.yaml  tester-essence.yaml
.emergence/schemas/physics/: conservation-laws.yaml  testing-environment.yaml
.emergence/tests/: README.md  requirements.txt  run_all_tests.py  test_integration.py  test_performance.py  test_suite.py  test_validation.py
.emergence/tests/.emergence/: integration_test_report.json  test_report.json  validation_test_report.json
.emergence/validation/: testing-system-validation.yaml
crates/emergence-memory/: Cargo.toml
crates/emergence-memory/src/: lib.rs
crates/emergence-models/: Cargo.toml
crates/emergence-models/src/: cloud.rs  composer.rs  config.rs  intent.rs  lib.rs  manager.rs  memory.rs  reasoning.rs  response.rs
crates/emergence-nervous-system/: Cargo.toml
crates/emergence-nervous-system/src/: lib.rs
crates/emergence-physics/: Cargo.toml
crates/emergence-physics/src/: causality.rs  energy.rs  lib.rs  resources.rs  security.rs  validation.rs
crates/emergence-runtime/: Cargo.toml
crates/emergence-runtime/examples/: debugger-llm-tool.rs
crates/emergence-runtime/src/: debugger.rs  lib.rs
docs/: DEBUGGING_EMERGENCE.md  EMERGENCE_IMPLEMENTATION_SUMMARY.md  debugger-enhancements.md  debugger-guide.md  debugger-tool-schema.md  tiny-models-research.md
docs/architecture/: EMERGENCE_MIGRATION_GUIDE.md  EMERGENCE_SUBSTRATE_RESEARCH.md
scripts/: debug-emergence.sh  debugger-demo.sh  demo-autonomous-debugging.sh  enhanced-debugger-test.sh  setup.sh  test-composable-models.sh  test-tiny-models.sh
