[package]
name = "emergence-models"
version = "0.1.0"
edition = "2021"
authors = ["EMERGENCE Team"]
description = "Composable AI models for EMERGENCE living agents"
license = "MIT"
repository = "https://github.com/emergence-ai/emergence"
keywords = ["ai", "models", "machine-learning", "emergence", "agents"]
categories = ["artificial-intelligence", "science"]

[dependencies]
# Core async and error handling
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client for cloud APIs
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Concurrency
dashmap = "5.0"

# System information
num_cpus = "1.0"

# Physics engine integration
emergence-physics = { path = "../emergence-physics" }

# Optional: Machine learning frameworks (commented out for now)
# tch = "0.13"  # PyTorch bindings (uncomment when needed)
# tokenizers = "0.15"  # HuggingFace tokenizers (uncomment when needed)
# burn = "0.12" # Rust ML framework (uncomment when needed)

[dev-dependencies]
tokio-test = "0.4" 